# boss-mcp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
eval/accuracy/: analyse_accuracy.py  run_accuracy.py  score.py  tables.py  tasks.py
eval/baseline_static/: eval_baseline.py
eval/format2x2/: analyse_results.py  format_prompts.py  questions.py  run_format_eval.sh
eval/lib/: boss_client.py  utils.py
src/: boss_raii.h  expression.cpp  expression.h  handlers.cpp  handlers.h  logger.cpp  logger.h  main.cpp  transport.cpp  transport.h
test/: test_cli.txt  test_mcp.py
